--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quill": "^1.3.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-seamless-scroll": "^1.1.21",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
